objects/Condition_Template__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Clause__c</fullName>
        <label>Clause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The relative date field for a condition recurrence to be based on.</description>
        <inlineHelpText>The relative date field for a condition recurrence to be based on.</inlineHelpText>
        <label>Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Condition_Relative_Dates</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Condition_Days</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence__c</fullName>
        <label>Recurrence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Condition_Recurrence</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Code__c</fullName>
        <label>Template Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Condition Template</label>
    <nameField>
        <label>Condition Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condition Templates</pluralLabel>
    <recordTypes>
        <fullName>Condition_Precedent</fullName>
        <active>true</active>
        <description>A condition precedent is an event or state of affairs that is required before something else will occur. In contract law, a condition precedent is an event which must occur, unless its non-occurrence is excused.</description>
        <label>Condition Precedent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Condition_Subsequent</fullName>
        <active>true</active>
        <description>A condition subsequent is an event or state of affairs that brings an end to something else. A condition subsequent is often used in a legal context as a marker bringing an end to one&apos;s legal rights or duties</description>
        <label>Condition Subsequent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Covenant</fullName>
        <active>true</active>
        <description>Covenants in finance most often relate to terms in a financial contracting, such as a loan document stating the limits at which the borrower can further lend.</description>
        <label>Financial Covenant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Governance_Check</fullName>
        <active>true</active>
        <description>Internal governance checks against a deal</description>
        <label>Governance Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Information_Undertaking</fullName>
        <active>true</active>
        <description>Guaranty, promise, or stipulation that creates an obligation.</description>
        <label>Information Undertaking</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>